--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "C_Cpp.default.compilerPath": "",
-    "cmake.configureOnOpen": true
+    "cmake.configureOnOpen": true,
+    "cmake.sourceDirectory": "C:/Users/Liam/Desktop/Projects/osdeck/OSDeck-Client/.pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src"
 }
