--- a/platformio.ini
+++ b/platformio.ini
@@ -1,12 +1,19 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:esp32-s3-devkitc-1]
 platform = espressif32
 board = esp32-s3-devkitc-1
-
-build_flags= -DBOARD_HAS_PSRAM
+build_flags = -DBOARD_HAS_PSRAM
 board_build.arduino.memory_type = qio_opi
 board_build.partitions = default_16MB.csv
 board_upload.flash_size = 16MB
-
 framework = arduino
-lib_deps = 
-	bblanchon/ArduinoJson@^6.19.4
+lib_deps = bblanchon/ArduinoJson@^7.0.4
