--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,6 @@ board_build.arduino.memory_type = qio_opi
 board_build.partitions = default_16MB.csv
 board_upload.flash_size = 16MB
 framework = arduino
-lib_deps = bblanchon/ArduinoJson@^7.0.4
+lib_deps = 
+    bblanchon/ArduinoJson@^7.0.4
+    https://github.com/Xander-Electronics/Base64
